--- a/artwebsite/src/Footer/Footer.css
+++ b/artwebsite/src/Footer/Footer.css
@@ -22,6 +22,14 @@
   margin-top: 10px;
 }
 
+.copyright-text {
+  margin-left: 30px;
+  margin-right: 5px;
+  font-size: 15px;
+  margin-top: 1px;
+  margin-bottom: 10px;
+}
+
 .socials-icons {
   display: flex;
   flex-direction: row;
